# langgraph-learning

./: .gitignore
docs/: README.md  (+2 more)
practice/: .env.example  README.md  pyproject.toml  requirements.txt  verify_setup.py
practice/common/: __init__.py  fake_llm.py  test_helpers.py
practice/module_01_agent_overview/: 01_quiz.ipynb
practice/module_02_langgraph_fundamentals/: 01_first_graph.ipynb  02_conditional_graph.ipynb  03_sentiment_analyzer.ipynb
practice/module_03_dev_environment/: 01_fake_llm.ipynb  02_three_node_graph.ipynb
practice/module_04_first_agent/: 01_document_summarizer.ipynb  02_email_classifier.ipynb
practice/module_05_prompt_engineering/: 01_prompt_structure.ipynb  02_few_shot.ipynb  03_yaml_prompts.ipynb
practice/module_06_structured_output/: 01_pydantic_models.ipynb  02_structured_output.ipynb  03_json_parser.ipynb
practice/module_07_llm_optimization/: 01_cost_calculator.ipynb  02_model_router.ipynb  03_caching.ipynb
practice/module_08_error_handling/: 01_retry_backoff.ipynb  02_circuit_breaker.ipynb  03_resilient_agent.ipynb
practice/module_09_external_integration/: 01_async_calls.ipynb  02_rate_limiter.ipynb  03_health_check_agent.ipynb
practice/module_10_resource_optimization/: 01_token_budget.ipynb  02_annotated_reducer.ipynb  03_code_compression.ipynb
practice/module_11_quality_assurance/: 01_validation_pyramid.ipynb  02_self_reflection.ipynb  03_golden_set.ipynb  04_human_in_the_loop.ipynb
practice/module_12_advanced_patterns/: 01_checkpointing.ipynb  02_subgraphs.ipynb  03_parallel_send.ipynb  04_streaming.ipynb
(+64 files in other folders)
