[project]
name = "langgraph-practice"
version = "1.0.0"
description = "LangGraph 학습 실습 프로젝트"
requires-python = ">=3.10"

dependencies = [
    "langgraph>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "pydantic>=2.0",
    "jupyter",
    "ipykernel",
    "deepdiff",
    "httpx",
    "tenacity",
    "tiktoken",
    "python-dotenv",
    "pyyaml",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]
